update watch history docs
